test/library/standard/Random/elliot/testBadNth.good
testBadNth.chpl:5: error: halt reached - cannot skip to a negative position: -1 in the random stream
