test/library/standard/Random/elliot/testBadNth.chpl
use Random;

var r = new randomStream(real, 314159265);

r.skipTo(-1);
